--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jackspeak": "2.1.1"
   },
   "dependencies": {
+    "clsx": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
