style: add ts aliases

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,17 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
+    "baseUrl": "./src",
+    "paths": {
+      "@app": ["app"],
+      "@api": ["api"],
+      "@components": ["components"],
+      "@widgets": ["widgets"],
+      "@contexts": ["contexts"],
+      "@hooks": ["hooks"],
+      "@utils": ["utils"],
+      "@types": ["types"],
+    },
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }],
