--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "format:fix": "prettier --write . --ignore-unknown",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
+    "build-storybook": "storybook build -o docs-build",
     "prepare": "husky install"
   },
   "resolutions": {
