--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "clsx": "^2.1.0",
     "octokit": "^3.1.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.12",
